# croesus

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.codex/: hooks.json
croesus/: __init__.py
croesus/assets/: __init__.py  classifier.py  identity.py  ingest_universe.py  metadata_provider.py  models.py  repository.py  resolver.py  seed_benchmarks.py  seed_us_equities.py
croesus/backtest/: __init__.py  config.py  engine.py  metrics.py
croesus/data_sources/: base.py  yfinance_metadata.py  yfinance_source.py
croesus/db/: __init__.py  connection.py  migrate.py  schema.sql
croesus/disclosures/: ingest.py  (+9 more)
experiments/: RESEARCH_ROADMAP.md
tests/: _web_helpers.py  test_approval_gate.py  test_asset_attrs.py  test_asset_registry.py  test_backtest.py  test_data_freshness.py  test_data_quality.py  test_db_migrate_events.py  test_disclosure_texts.py  test_disclosures.py  test_events.py  test_execution.py  test_forward_test.py  test_fundamentals.py  test_fx_ingest.py  test_intrinsic_bands.py  test_ism_scraper.py  test_jobs.py  test_local_sync.py  test_macro_engine.py  test_macro_wiring.py  test_multifactor.py  test_news_finnhub.py  test_news_gdelt.py  test_normalized_dcf_compute.py  test_normalized_dcf_math.py  test_normalized_dcf_repository.py  test_opportunity_report_normalized.py  test_opportunity_review.py  test_opportunity_review_cli.py  test_opportunity_risk_gate.py  test_opportunity_risk_gate_report.py  test_performance.py  test_performance_backfill.py  test_performance_report.py  test_portfolio_action_report.py  test_portfolio_exposure.py  test_portfolio_mark_to_market.py  test_portfolio_snapshot.py  test_prices_and_factors.py  (+31 more)
(+368 files in other folders)
