[project]
name = "croesus"
version = "0.1.0"
description = "Python-first investment research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0",
  "pandas>=2.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "yfinance>=0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
