[project]
name = "croesus"
version = "0.1.0"
description = "Python-first investment research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "questionary>=2.0",
  "requests>=2.28",
  "yfinance>=0.2",
  # macro data sources
  "fredapi>=0.5",
  "lxml>=4.9",
  "trafilatura>=1.6",
  "xlrd>=2.0",
  # web dashboard
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
